--- a/README.html
+++ b/README.html
@@ -48,7 +48,7 @@
 	<a href="./LICENSE.html"><img src="https://img.shields.io/pypi/l/vizex?color=g&style=flat-square"></a>
 </p>
 <p><strong>vizex</strong> is the terminal program for the UNIX/Linux systems which helps the user to visualize the disk space usage for every partition and media on the user's machine. <strong>vizex</strong> is highly customizable and can fit any user's taste and preferences.</p>
-<p><strong>vizexdf</strong> is a new feature that allows to organize and print directory data in the terminal. With a recent release 2.0.4 <code>vizexdf</code> does directory parsing using Asynchronious execution, which improved runtime perfromance by over 400%.</p>
+<p><strong>vizexdf</strong> is a new feature that allows to organize and print directory data in the terminal. With a recent release 2.0.4 <code>vizexdf</code> does directory parsing using Asynchronous execution, which improved runtime performance by over 400%.</p>
 <p>You can check <a href="https://github.com/bexxmodd/vizex/wiki/Release-History">full release history here.</a></p>
 <br>
 <br>
